# Text2SQL-E-Commerce-Chatbot

./: .env  main.py  pyproject.toml  requirements.txt
app/text_2_sql/: config.py  example_usage.py  text2sql_agent.py  workflow.py
app/text_2_sql/agents/: analysis_agent.py  decide_graph_need.py  error_agent.py  execute_sql.py  guardrails_agent.py  sql_agent.py  viz_agent.py
app/text_2_sql/core/: schema.py  state.py
app/text_2_sql/llm/: client.py
app/text_2_sql/prompts/: agent_configs.py
app/text_2_sql/utils/: routing.py
database/: schema.sql
database/migrations/: migrate_to_supabase.py  setup_schema.py
notebooks/: test_agent.ipynb
scripts/: download_data.py
